--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
-#canvas{
-	border:2px double black;
+#game{
+	position:absolute;
+}
+
+#gui{
+	position:absolute;
+	/* width:640px; */
+	/* height:320px; */
+}
+
+#game_canvas{
+	position:absolute;
+}
+
+#start_menu{
+	/* position:relative; */
+	/* bottom:70%; */
+	/* left:40%; */
+	margin:0 auto;
+	width:20%;
+	height:20%;
+}
+
+#start_menu button{
+	margin:0 auto;
+	display:block;
+	padding-left:30px;
+	padding-right:30px;
 }
